docs: swagger doc for login and me, auth for swagger
